2011-03-31  Miloslav Trmač  <mitr@redhat.com>

	* bind-mount.c: Use __linux for #ifdef.
	(MOUNTINFO_PATH, OBSTACK_OBJECT_SIZE, struct mount, mount_entries)
	(num_mount_entries, mount_data_obstack, mount_data_mark)
	(mount_string_obstack, mount_string_mark, mount_list_obstack)
	(mountinfo_line_obstack, init_mount_entries, read_mount_line)
	(parse_mount_string, read_mount_entry, read_mount_entries): New
	definitions, reading /proc/self/mountinfo.
	(mountinfo_fd): New variable.
	(last_path_mounted_mtime): Removed variable.
	(cmp_ints, cmp_mount_entry_pointers, cmp_id_mount_entry): New functions.
	(rebuild_bind_mount_paths, is_bind_mount, bind_mount_init): Use data
	from /proc/self/mountinfo.

	* bind-mount.c (bind_mount_init): Rename from init_bind_mount_paths ().
	All users changed.
	* bind-mount.h (bind_mount_init): Rename from init_bind_mount_paths ().

2011-03-21  Miloslav Trmač  <mitr@redhat.com>

	* HACKING: New file.

	* bind-mount.h:
	* bind-mount.c: New files, based on mlocate.
	* Makefile.am (tmpwatch_SOURCES): Add bind-mount.[ch].
	* tmpwatch.c (cleanupDirectory): Skip non-trivial bind mounts.  Silence
	errors when trying to remove an empty (bind) mount point.
	(main): Initialize data for is_bind_mount().
	* tmpwatch.8: Document that bind mounts are skipped.

	* m4/gnulib-cache.m4: Add `stat-time', `timespec'.
	* lib/stat-time.h: Silence some warnings.

2011-03-11  Miloslav Trmač  <mitr@redhat.com>

	* tmpwatch.c (cleanupDirectory): Close "dir" on error.
	(cleanupDirectory): Remove an unnecessary assignment.
	(message): Call va_end().

2010-08-07  Miloslav Trmač  <mitr@redhat.com>

	* tmpwatch.c (usage): Add missing space.

	* tmpwatch.8: Add -X to SYNOPSIS as well.

	* tmpwatch.c (usage): Mention -X, --exclude-pattern.
	* tmpwatch.8: Add --exclude-pattern to SYNOPSIS.

2010-07-23  Miloslav Trmač  <mitr@redhat.com>

	* tmpwatch.8: Fix description of --force.

2010-06-12  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Define PACKAGE_URL.
